<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:gravity="center"
	android:orientation="vertical">

	<EditText
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:ems="10"
		android:text="@string/select_saves_to_back_up"
		android:inputType="text"
		android:autofillHints=""
		tools:ignore="LabelFor" />

	<Spinner
			android:id="@+id/gameDropList"
			android:layout_height="wrap_content"
			android:layout_width="fill_parent"
			android:layout_gravity="top" android:minHeight="48dp"/>

	<EditText
		android:layout_height="wrap_content"
		android:ems="10"
		android:text="@string/base_destination"
		android:layout_width="match_parent"
		android:inputType="text"
		android:autofillHints=""
		tools:ignore="LabelFor" />
	
	<Button
		android:layout_height="wrap_content"
		android:layout_width="wrap_content"
		android:id="@+id/btnReset"
		android:onClick="resetDestination"
		android:text="@string/reset_basedestination"
		/>

	<EditText
		android:id="@+id/txtDestPath"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_gravity="right"
		android:autofillHints=""
		android:clickable="false"
		android:contextClickable="false"
		android:cursorVisible="false"
		android:ems="10"
		android:enabled="false"
		android:focusable="false"
		android:focusableInTouchMode="false"
		android:inputType="text"
		android:paddingStart="60dp"
		android:textAlignment="viewEnd"
		android:textSize="20sp"
		android:textStyle="italic"
		tools:ignore="LabelFor" />

	<EditText
			android:inputType="textMultiLine|textNoSuggestions"
			android:autoLink="none"
			android:layout_height="wrap_content"
			android:ems="10"
			android:layout_width="match_parent"
			android:id="@+id/txtStatus"
			android:textAlignment="center" android:minHeight="48dp" android:hint="@string/status"
		android:autofillHints="" />

	<LinearLayout
		android:layout_height="wrap_content"
		android:layout_width="wrap_content"
		android:orientation="horizontal">

		<Button
			android:layout_height="wrap_content"
			android:text="@string/back_up"
			android:layout_width="wrap_content"
			android:id="@+id/btnBackup"
			android:onClick="backupFolder"
			style="?android:attr/buttonBarButtonStyle" />

		<Button
			android:layout_height="wrap_content"
			android:text="@string/restore"
			android:layout_width="wrap_content"
			android:id="@+id/btnRestore"
			android:onClick="restoreBackup"
			style="?android:attr/buttonBarButtonStyle" />

	</LinearLayout>

	<androidx.appcompat.widget.SwitchCompat
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:id="@+id/swtchTimeStamp"
			android:onClick="toggleTimeStamp"
			android:text="@string/destination_folder_includes_time_stamp" android:minHeight="48dp"/>

	<EditText
			android:inputType="textMultiLine|textNoSuggestions"
			android:autoLink="none"
			android:layout_height="wrap_content"
			android:ems="10"
			android:layout_width="match_parent"
			android:id="@+id/txtHelp" android:minHeight="48dp"
		android:autofillHints="" />

</LinearLayout>

